# yolov8-onnx-cpp-inference

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/nn/: onnx_model_base.h
lib/onnxruntime-linux-x64-gpu-1.17.0/: libonnxruntime.so.1.17.0
src/: main.cpp
src/nn/: onnx_model_base.cpp
src/utils/: common.cpp
